hphp/hack/test/typecheck/xhp_attr_5.php.exp
File "xhp_attr_5.php", line 7, characters 10-17:
Invalid return type (Typing[4110])
File "xhp_attr_5.php", line 6, characters 28-30:
This is an int
File "xhp_attr_5.php", line 4, characters 13-15:
It is incompatible with a nullable type
