hphp/hack/test/typecheck/xhp_attr_5.php
<?hh // strict
class :foo {
  // Typechecker must consider this nullable
  attribute int x;
}
function test1(:foo $obj): int {
  return $obj->:x;
}
